
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


struct si476x_core {int revision; } ;
struct si476x_agc_status_report {int dummy; } ;
struct TYPE_2__ {int (* agc_status ) (struct si476x_core*,struct si476x_agc_status_report*) ;} ;


 int BUG_ON (int) ;
 int SI476X_REVISION_A30 ;
 TYPE_1__* si476x_cmds_vtable ;
 int stub1 (struct si476x_core*,struct si476x_agc_status_report*) ;

int si476x_core_cmd_agc_status(struct si476x_core *core,
      struct si476x_agc_status_report *report)

{
 BUG_ON(core->revision > SI476X_REVISION_A30 ||
        core->revision == -1);
 return si476x_cmds_vtable[core->revision].agc_status(core, report);
}
